# incremynt

./: Cargo.toml  README.md
.github/workflows/: master.yml  pullrequest.yml
incremint/: Cargo.toml
incremint-cli/: Cargo.toml
incremint-cli/src/: lib.rs  main.rs
incremint-ui/: Cargo.toml  index.html
incremint-ui/scripts/: dev-serve.sh  prod-build.sh
incremint-ui/src/: application.rs  content.rs  document.rs  lib.rs  main.rs
incremint/src/: digit.rs  increment.rs  interface.rs  lib.rs  show.rs  space.rs  write.rs
incremynt/: Cargo.toml
incremynt-cli/: Cargo.toml
incremynt-cli/src/: lib.rs  main.rs
incremynt-ui/: Cargo.toml  index.html
incremynt-ui/scripts/: dev-serve.sh  prod-build.sh
incremynt-ui/src/: application.rs  document.rs  lib.rs  main.rs
incremynt/src/: digit.rs  error.rs  increment.rs  interface.rs  space.rs  write.rs
src/: main.rs  show.rs
