[package]
name = "incremynt-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
incremynt = { path = "../incremynt" }

chrono = "0.4.39"
gloo-console = "0.3.0"
web-sys = { version = "0.3.76", features = [
    "Clipboard",
    "HtmlSelectElement",
    "Navigator",
] }
yew = { version = "0.21.0", features = ["csr"] }
yew-autoprops = "0.4.1"
wasm-bindgen-futures = "0.4.49"
